# diffly

./: .gitignore  .goreleaser.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  cliff.toml  justfile  sailfish.toml
.github/DISCUSSION_TEMPLATE/: bug_report.yml  general.yml  ideas.yml  q_and_a.yml
.github/workflows/: audit.yml  ci.yml  lint.yml  release.yml
examples/: diff_as_lib.rs
examples/mariadb/: config.toml  docker-compose.yml  init.sql
examples/mysql/: config.toml  docker-compose.yml
examples/postgresql/: config.toml  docker-compose.yml  init.sql
examples/sqlite/: config.toml  docker-compose.yml  init.sql  init_source.sql
src/: lib.rs  main.rs
src/application/: conflict.rs  diff.rs  mod.rs  monitoring.rs  snapshot.rs
src/domain/: changeset.rs  conflict.rs  diff_result.rs  fingerprint.rs  mod.rs  ports.rs  snapshot.rs  table_diff.rs  value_objects.rs
src/infrastructure/: config.rs
src/infrastructure/db/: client.rs  dialect.rs  mod.rs  row_mapper.rs  sql_utils.rs
src/presentation/: cli_summary.rs  mod.rs
src/presentation/templates/html/: _header.stpl  _inserts_deletes_group.stpl  _perf.stpl  _table.stpl  _updates_group.stpl  changeset.stpl
src/presentation/writers/: html.rs  json.rs  mod.rs  sql.rs
