[package]
name = "diffly"
version = "0.1.0"
rust-version = "1.70.0"
edition = "2021"
description = "Quickly compare your SQL data with clarity and style."
publish = true
authors = ["Yudao <opensource@kodaskills.co>"]
license = "MIT"
documentation = "https://docs.rs/diffly"
homepage = "https://github.com/kodaskills/diffly"
repository = "https://github.com/kodaskills/diffly"
readme = "README.md"
keywords = ["diff", "database", "sql", "migration", "cli"]
categories = ["command-line-utilities", "database", "development-tools","development-tools::testing"]
include = [
    "src/**/*.rs",
    "src/**/*.stpl",
    "examples/diff_as_lib.rs",
    "Cargo.toml",
    "sailfish.toml",
    "README.md",
    "LICENSE*"
]

[lib]
name = "diffly"
path = "src/lib.rs"

[[bin]]
name = "diffly"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "diff_as_lib"
path = "examples/diff_as_lib.rs"

[features]
cli = ["dep:clap", "dep:tracing-subscriber", "dep:tabled", "dep:colored", "postgres", "mysql", "sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "any",
    "json", "chrono", "uuid",
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
colored = { version = "2", optional = true }
tabled = { version = "0.17", features = ["derive", "ansi"], optional = true  }
config = { version = "0.15", default-features = false, features = ["toml", "convert-case"] }
dirs = "5"
async-trait = "0.1.89"
sha2 = "0.10"
sailfish = "0.10.1"

[dev-dependencies]
tempfile = "3"
